@@ -84,11 +84,53 @@
             </properties>
         </profile>
         <profile>
-            <id>java-pre-21</id>
+            <id>java-23-preview</id>
             <activation>
                 <property>
                     <name>java.version</name>
-                    <value>!21</value>
+                    <value>23</value>
+                </property>
+            </activation>
+            <properties>
+                <enable.preview>--enable-preview</enable.preview>
+            </properties>
+        </profile>
+        <profile>
+            <id>java-11</id>
+            <activation>
+                <property>
+                    <name>java.version</name>
+                    <value>11</value>
+                </property>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-compiler-plugin</artifactId>
+                        <version>${maven.compiler.plugin.version}</version>
+                        <configuration>
+                            <compilerArgs>
+                                <compilerArg>${enable.preview}</compilerArg>
+                            </compilerArgs>
+                            <source>${java.version}</source>
+                            <target>${java.version}</target>
+                            <excludes>
+                                <exclude>**/loom/**</exclude>
+                                <exclude>**/shuffle/PolluteCopyTest.java</exclude>
+                                <exclude>**/shuffle/TestFill.java</exclude>
+                            </excludes>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>java-17</id>
+            <activation>
+                <property>
+                    <name>java.version</name>
+                    <value>17</value>
                 </property>
             </activation>
             <build>
